upload file as whole instead of digesting direct bytes
